operations/database-migration/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db-migration
  labels:
    app.kubernetes.io/part-of: database-migration
    purpose: online-schema-migration-lab
